# mlinpxplugin

./: CMakeLists.txt  README.md  README_RU.md
include/: CMakeLists.txt  CollectionProcess.h  CollectionProcessGui.h  MLInpxPlugin.h
omp_test/: CMakeLists.txt  main.cpp
po/: MLInpxPlugin.po
src/: CMakeLists.txt  CollectionProcess.cpp  CollectionProcessGui.cpp  MLInpxPlugin.cpp
